crates/pmcp-code-mode-derive/tests/ui/non_send_field.stderr
error[E0277]: `Rc<std::string::String>` cannot be sent between threads safely
  --> tests/ui/non_send_field.rs:22:8
   |
22 | struct MyServer {
   |        ^^^^^^^^ `Rc<std::string::String>` cannot be sent between threads safely
   |
   = help: within `MyServer`, the trait `std::marker::Send` is not implemented for `Rc<std::string::String>`
note: required because it appears within the type `MyServer`
  --> tests/ui/non_send_field.rs:22:8
   |
22 | struct MyServer {
   |        ^^^^^^^^
note: required by a bound in `assert_send_sync`
  --> tests/ui/non_send_field.rs:21:10
   |
21 | #[derive(CodeMode)]
   |          ^^^^^^^^ required by this bound in `assert_send_sync`
   = note: this error originates in the derive macro `CodeMode` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `Rc<std::string::String>` cannot be shared between threads safely
  --> tests/ui/non_send_field.rs:22:8
   |
22 | struct MyServer {
   |        ^^^^^^^^ `Rc<std::string::String>` cannot be shared between threads safely
   |
   = help: within `MyServer`, the trait `Sync` is not implemented for `Rc<std::string::String>`
note: required because it appears within the type `MyServer`
  --> tests/ui/non_send_field.rs:22:8
   |
22 | struct MyServer {
   |        ^^^^^^^^
note: required by a bound in `assert_send_sync`
  --> tests/ui/non_send_field.rs:21:10
   |
21 | #[derive(CodeMode)]
   |          ^^^^^^^^ required by this bound in `assert_send_sync`
   = note: this error originates in the derive macro `CodeMode` (in Nightly builds, run with -Z macro-backtrace for more info)
